--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,5 +1,7 @@
 module(
     name = "rules_multirun",
-    version = "0.2.0",
+    version = "0.3.0",
     compatibility_level = 1,
 )
+
+bazel_dep(name = "bazel_skylib", version = "1.3.0")
