Test location expansion in multirun on sh_binary

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -93,12 +93,25 @@ multirun(
     commands = [":validate_binary_env"],
 )
 
+sh_binary(
+    name = "validate_binary_args_location",
+    args = ["$(rlocationpath :hello)"],
+    data = [":hello"],
+    srcs = ["validate-chdir-location.sh"],
+)
+
+multirun(
+    name = "multirun_binary_args_location",
+    commands = [":validate_binary_args_location"],
+)
+
 sh_test(
     name = "test",
     srcs = ["test.sh"],
     data = [
         ":hello",
         ":multirun_binary_args",
+        ":multirun_binary_args_location",
         ":multirun_binary_env",
         ":multirun_parallel",
         ":multirun_serial",
