Add bzl_library targets
Fixes https://github.com/keith/rules_multirun/issues/23

--- a/internal/BUILD
+++ b/internal/BUILD
@@ -1,3 +1,4 @@
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
 load("@rules_python//python:defs.bzl", "py_binary")
 
 py_binary(
@@ -5,4 +6,10 @@ py_binary(
     srcs = ["multirun.py"],
     python_version = "PY3",
     visibility = ["//visibility:public"],
+)
+
+bzl_library(
+    name = "constants",
+    srcs = ["constants.bzl"],
+    visibility = ["//:__pkg__"],
 )
