Add generate docs

--- a/.bazelrc
+++ b/.bazelrc
@@ -3,4 +3,8 @@ common --lockfile_mode=off
 build --remote_cache=grpcs://remote.buildbuddy.io
 build --remote_timeout=3600
 
+# TODO: Remove once stardoc's protobuf doesn't have warnings
+build --host_per_file_copt="external/.*protobuf.*@-Wno-everything"
+build --per_file_copt="external/.*protobuf.*@-Wno-everything"
+
 test --test_output=errors
