--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,3 +6,10 @@ module(
 
 bazel_dep(name = "bazel_skylib", version = "1.3.0")
 bazel_dep(name = "rules_python", version = "0.27.1")
+
+bazel_dep(
+    name = "stardoc",
+    version = "0.6.2",
+    dev_dependency = True,
+    repo_name = "io_bazel_stardoc",
+)
