--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,14 @@ jobs:
       - run: bazelisk test //... --enable_bzlmod
       - run: USE_BAZEL_VERSION=rolling bazelisk test //... --enable_bzlmod
       - run: USE_BAZEL_VERSION=last_green bazelisk test //... --enable_bzlmod
+
+  windows_test:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: bazelisk test //...
+      - run: USE_BAZEL_VERSION=rolling bazelisk test //...
+      - run: USE_BAZEL_VERSION=last_green bazelisk test //...
+      - run: bazelisk test //... --enable_bzlmod
+      - run: USE_BAZEL_VERSION=rolling bazelisk test //... --enable_bzlmod
+      - run: USE_BAZEL_VERSION=last_green bazelisk test //... --enable_bzlmod
