--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,32 @@ name: CI
     - cron: '3 11 * * *'
 
 jobs:
+  macos_test:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: bazelisk test //...
+      - run: USE_BAZEL_VERSION=rolling bazelisk test //...
+      - run: USE_BAZEL_VERSION=last_green bazelisk test //...
+      - run: bazelisk test //... --enable_bzlmod
+      - run: USE_BAZEL_VERSION=rolling bazelisk test //... --enable_bzlmod
+      - run: USE_BAZEL_VERSION=last_green bazelisk test //... --enable_bzlmod
+
+  ubuntu_test:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - run: bazelisk test //...
+      - run: USE_BAZEL_VERSION=rolling bazelisk test //...
+      - run: USE_BAZEL_VERSION=last_green bazelisk test //...
+      - run: bazelisk test //... --enable_bzlmod
+      - run: USE_BAZEL_VERSION=rolling bazelisk test //... --enable_bzlmod
+      - run: USE_BAZEL_VERSION=last_green bazelisk test //... --enable_bzlmod
+
   windows_test:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - run: bazelisk test //tests/...
+      - run: USE_BAZEL_VERSION=rolling bazelisk test //tests/...
+      - run: USE_BAZEL_VERSION=last_green bazelisk test //tests/...
