--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: bazelisk test //tests/...
-      - run: USE_BAZEL_VERSION=rolling bazelisk test //tests/...
-      - run: USE_BAZEL_VERSION=last_green bazelisk test //tests/...
+      - run:  bazelisk test //tests/...
+        env:
+          USE_BAZEL_VERSION: rolling
+      - run: bazelisk test //tests/...
+        env:
+          USE_BAZEL_VERSION: last_green
