--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - run: USE_BAZEL_VERSION=6.x bazelisk test //...
+      - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
       - run: bazelisk test //... --enable_bzlmod=false
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - run: USE_BAZEL_VERSION=6.x bazelisk test //...
+      - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
       - run: bazelisk test //... --enable_bzlmod=false
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
