Add Windows support (#40)
In its current state this still requires bash.exe

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,15 @@ jobs:
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
       - run: USE_BAZEL_VERSION=last_green bazelisk test //...
+
+  windows_test:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: bazelisk test //tests/...
+      - run:  bazelisk test //tests/...
+        env:
+          USE_BAZEL_VERSION: rolling
+      - run: bazelisk test //tests/...
+        env:
+          USE_BAZEL_VERSION: last_green
