Set legacy_create_init = False
This virtually sets `--incompatible_default_to_explicit_init_py` which
might not be possible globally.

--- a/internal/BUILD
+++ b/internal/BUILD
@@ -4,6 +4,7 @@ load("@rules_python//python:defs.bzl", "py_binary")
 py_binary(
     name = "multirun",
     srcs = ["multirun.py"],
+    legacy_create_init = False,
     python_version = "PY3",
     visibility = ["//visibility:public"],
     deps = [
