--- a/.bazelrc
+++ b/.bazelrc
@@ -1,14 +1,33 @@
+# we require symlinks
+startup --windows_enable_symlinks
+
 common --lockfile_mode=off
 
-build --remote_cache=grpcs://remote.buildbuddy.io
-build --remote_timeout=3600
+# Automatically apply --config=linux, --config=windows etc
+common --enable_platform_specific_config
+
+# Don’t want to push a rules author to update their deps if not needed.
+# https://bazel.build/reference/command-line-reference#flag--check_direct_dependencies
+# https://bazelbuild.slack.com/archives/C014RARENH0/p1691158021917459?thread_ts=1691156601.420349&cid=C014RARENH0
+common --check_direct_dependencies=off
+
+common --remote_cache=grpcs://remote.buildbuddy.io
+common --remote_timeout=3600
 
 # TODO: Remove once stardoc's protobuf doesn't have warnings
-build --host_per_file_copt="external/.*protobuf.*@-Wno-everything"
-build --per_file_copt="external/.*protobuf.*@-Wno-everything"
+common:linux --host_per_file_copt="external/.*protobuf.*@-Wno-everything"
+common:linux --per_file_copt="external/.*protobuf.*@-Wno-everything"
 
 # TODO: Remove once stardoc's zlib doesn't have warnings
-build --host_per_file_copt="external/.*zlib.*@-Wno-everything"
-build --per_file_copt="external/.*zlib.*@-Wno-everything"
+common:linux --host_per_file_copt="external/.*zlib.*@-Wno-everything"
+common:linux --per_file_copt="external/.*zlib.*@-Wno-everything"
 
-test --test_output=errors
+# rules_go's go sdk cgo compiler doesn't build with some compilers 
+# that may be configured by bazel, but we don't need it; disable
+common --@rules_go//go/config:pure
+
+common --test_output=errors
+
+# PATH varies when running vs testing, this makes it more like running to validate the actual behavior. Specifically '.' is included for tests but not runs
+common:linux --test_env=PATH=/usr/bin:/bin
+common:mac --test_env=PATH=/usr/bin:/bin
