--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - run: USE_BAZEL_VERSION=6.x bazelisk test //...
-      - run: bazelisk test //... --enable_bzlmod=false
+      - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
+      - run: bazelisk test //tests/... --enable_bzlmod=false
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
       - run: USE_BAZEL_VERSION=last_green bazelisk test //...
