--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,21 +13,21 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - run: USE_BAZEL_VERSION=6.x bazelisk test //...
-      - run: bazelisk test //... --enable_bzlmod=false
+      - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
+      - run: bazelisk test //tests/... --enable_bzlmod=false
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
-      - run: USE_BAZEL_VERSION=last_green bazelisk test //...
+      # - run: USE_BAZEL_VERSION=last_green bazelisk test //...
 
   ubuntu_test:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - run: USE_BAZEL_VERSION=6.x bazelisk test //...
-      - run: bazelisk test //... --enable_bzlmod=false
+      - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
+      - run: bazelisk test //tests/... --enable_bzlmod=false
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
-      - run: USE_BAZEL_VERSION=last_green bazelisk test //...
+      # - run: USE_BAZEL_VERSION=last_green bazelisk test //...
 
   windows_test:
     runs-on: windows-latest
@@ -37,6 +37,6 @@ jobs:
       - run:  bazelisk test //tests/...
         env:
           USE_BAZEL_VERSION: rolling
-      - run: bazelisk test //tests/...
-        env:
-          USE_BAZEL_VERSION: last_green
+      # - run: bazelisk test //tests/...
+      #   env:
+      #     USE_BAZEL_VERSION: last_green
