only test workspace with 7.x

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
-      - run: bazelisk test //tests/... --enable_bzlmod=false --enable_workspace
+      - run: USE_BAZEL_VERSION=7.x bazelisk test //tests/... --enable_bzlmod=false
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
       - run: USE_BAZEL_VERSION=last_green bazelisk test //...
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
-      - run: bazelisk test //tests/... --enable_bzlmod=false --enable_workspace
+      - run: USE_BAZEL_VERSION=7.x bazelisk test //tests/... --enable_bzlmod=false
       - run: bazelisk test //...
       - run: USE_BAZEL_VERSION=rolling bazelisk test //...
       - run: USE_BAZEL_VERSION=last_green bazelisk test //...
