Update CI to ubuntu-latest

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - run: USE_BAZEL_VERSION=last_green bazelisk test //...
 
   ubuntu_test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: USE_BAZEL_VERSION=6.x bazelisk test //tests/...
