--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,12 +4,13 @@ module(
     compatibility_level = 1,
 )
 
+bazel_dep(name = "rules_shell", version = "0.4.1")
 bazel_dep(name = "bazel_skylib", version = "1.4.2")
 bazel_dep(name = "rules_python", version = "0.36.0")
 
 bazel_dep(
     name = "stardoc",
-    version = "0.7.1",
+    version = "0.7.2",
     dev_dependency = True,
     repo_name = "io_bazel_stardoc",
 )
